Changed background to a keyboard

--- a/tsos.css
+++ b/tsos.css
@@ -1,7 +1,8 @@
 /* TSOS.css */
 
 body {
-  background: #909193 url(distrib/images/linen.png) repeat;
+  background: #909193 url(distrib/images/steinway.jpg);
+  background-size: cover;
   font-family: Helvetica, Verdana, Arial, sans-serif;
   font-size: 12pt;
   font-weight: normal;
