Created Ready queue. Implemented run command. Added memory manager. Memory and memory display now populated. Tackles issue #18, #17, #13, #11, #12

--- a/tsos.css
+++ b/tsos.css
@@ -52,3 +52,9 @@ h3 {
   background-color: white;
   width: 875px;
 }
+
+th, td {
+  font-family: Courier New, Courier, monospace;
+  border: 1px solid gray;
+  padding: 5px;
+}
