Got rid of extra variables, fixed a bug in clearing memory, fixed a bug in single step, added dynamic styling for single step buttons. (#17, #15)

--- a/tsos.css
+++ b/tsos.css
@@ -122,27 +122,13 @@ h3 {
   z-index: -1;
 }
 
-/*th, td {
-  font-family: Courier New, Courier, monospace;
-  border: 1px solid gray;
-  padding: 5px;
-}*/
+#btnReset {
+  color: white;
+}
+#btnNextStep {
+  color: white;
+}
 
 #tableCPU thead td {
   width: 45px;
 }
-
-#divButtonBar {
-
-}
-
-#divMain {
-  /*background: url(distrib/images/spiral.jpg);*/
-  /*background-size: cover;*/
-}
-
-.panel {
-}
-/*#divCPU > label{
-  background-color: red;
-}*/
