--- a/tsos.css
+++ b/tsos.css
@@ -1,7 +1,6 @@
 /* TSOS.css */
 
 body {
-  /*background: #909193 url(distrib/images/piano.jpg);*/
   background-size: cover;
   font-family: Helvetica, Verdana, Arial, sans-serif;
   font-size: 12pt;
@@ -49,14 +48,19 @@ h3 {
 }
 
 #divTaskBar{
-  background-color: white;
   width: 875px;
+  background: rgba(255,255,255,0.6);
 }
 
 #divLog {
   background-color: rgba(0,0,0,.2);
   border: 2px;
   border-radius: 5px;
+}
+#divLog textarea {
+  font-family: Courier;
+  width: 400px;
+  font-size: 11px;
 }
 #divCPU {
   background-color: rgba(0,0,0,.2);
@@ -103,6 +107,7 @@ h3 {
 }
 #divUserProgramInput textarea {
   width: 90%;
+  font-family: Courier;
 }
 #header {
   position: relative;
@@ -111,7 +116,7 @@ h3 {
   content : "";
   display: block;
   position: absolute;
-  top: 0;
+  top: -20px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -131,4 +136,21 @@ h3 {
 
 #tableCPU thead td {
   width: 45px;
+}
+
+.background {
+  position: relative;
+}
+.background:after {
+  content : "";
+  display: block;
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity : 0.1;
+  z-index: -1;
+  background: #909193 url(distrib/images/spiral.jpg);
+  background-size: cover;
 }
