Fixed shutdown to remove processes and stop executing. Base and limit of partition now considered in branching (no magic numbers). Memory manager now checks to make sure user program can fit in memory (#19, #17).

--- a/tsos.css
+++ b/tsos.css
@@ -151,6 +151,8 @@ nav {
 
 .background {
   position: relative;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .background:after {
   content : "";
