--- a/tsos.css
+++ b/tsos.css
@@ -154,6 +154,17 @@ nav {
   overflow-x: hidden;
   overflow-y: hidden;
 }
+
+@-webkit-keyframes rotate {
+  from {-webkit-transform:rotate(0deg);}
+  to {  -webkit-transform:rotate(360deg);}
+}
+
+@-moz-keyframes rotate {
+  from {-moz-transform:rotate(0deg);}
+  to {  -moz-transform:rotate(360deg);}
+}
+
 .background:after {
   content : "";
   display: block;
@@ -167,6 +178,14 @@ nav {
   z-index: -1;
   background: #909193 url(distrib/images/spiral.jpg);
   background-size: cover;
+  -webkit-animation-name: rotate;
+  -webkit-animation-duration:120s;
+  -webkit-animation-iteration-count:infinite;
+  -webkit-animation-timing-function:linear;
+  -moz-animation-name: rotate;
+  -moz-animation-duration:120s;
+  -moz-animation-iteration-count:infinite;
+  -moz-animation-timing-function:linear;
 }
 
 label .label-header{
