--- a/tsos.css
+++ b/tsos.css
@@ -112,6 +112,7 @@ nav {
 #tableReady {
   background-color: white;
   font-family: Courier;
+  font-size: 8px;
 }
 #tableReady thead {
   background-color: rgba(0,0,0,.1);
