--- a/tsos.css
+++ b/tsos.css
@@ -90,7 +90,8 @@ nav {
   background-color: rgba(0,0,0,.2);
   border: 2px;
   border-radius: 5px;
-  min-width: 800px;
+  min-width: 900px;
+  height: 300px;
 }
 #tableMemory {
   font-family: Courier;
@@ -222,4 +223,13 @@ label .label-header{
   color: black;
   font-weight: bold;
   margin-left: 40%;
+}
+
+#tableDisk {
+  max-width: 500px;
+}
+
+#tableDisk tr {
+  max-width: 500px;
+  overflow: scroll;
 }
