--- a/tsos.css
+++ b/tsos.css
@@ -180,8 +180,12 @@ nav {
   position: absolute;
   top: -20px;
   left: 0;
-  width: 100%;
-  height: 100%;
+  /* width: 100%;
+  height: 100%; */
+  width: 2000px;
+  height: 2000px;
+  margin-left: 5%;
+  /* margin-right: 20%; */
   min-height: 1500px;
   opacity : 0.1;
   z-index: -1;
