--- a/tsos.css
+++ b/tsos.css
@@ -9,133 +9,24 @@
 } */
 
 html {
-	font-family: "Roboto", sans serif;
-	font-weight: 300;
+  /* font-family: "Roboto", sans serif; */
+  font-family: Roboto Condensed, sans-serif;
 }
 
 h1 {
-  color: black;
-  font-size: 20px;
-  font-weight: normal;
-  font-style: normal;
+  font-weight: 100 !important;
+  font-size: 5.2rem !important;
   border-bottom: 1px solid black;
 }
 
-h2 {
-  color: black;
-  font-size: 20px;
-  font-weight: normal;
-  font-style: normal;
+h6 {
+  font-weight: 100 !important;
 }
 
-h3 {
-  font-family: Helvetica, Verdana, Arial, sans-serif;
-  font-size: 10pt;
-  font-weight: normal;
-  font-style: normal;
-}
-
-#display {
-  background-color:#DFDBC3;
-  border: 2px solid black;
-  cursor: default;
-}
-
-.normal_button {
-  width: 100px;
-}
-
-.footerText {
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 8pt;
-  text-align: center;
-}
-
-#divTaskBar {
-  /*width: 875px;*/
-  background: rgba(255,255,255,0.6);
-}
-#taskBar {
-  margin-left: 50px;
-  font-size: 10px;
-}
-nav {
-  font-size: 10px;
-}
-
-#divLog {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-}
-#divLog textarea {
-  font-family: Courier;
-  width: 400px;
-  font-size: 10px;
-}
-#divCPU {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-}
-#tableCPU {
-  background-color: white;
-  font-family: Courier;
-}
-#tableCPU thead {
-  background-color: rgba(0,0,0,.1);
-}
-#divMemory {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-}
-#divDisk {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-  min-width: 900px;
-  height: 300px;
-}
-#tableMemory {
-  font-family: Courier;
-}
-#tableMemory .memoryCell {
-  max-width: 30px;
-  overflow-x: hidden;
-}
-#divConsole {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-}
-#divUserProgramInput {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-}
-#divReady {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-  min-width: 450px;
-}
-#tableReady {
-  background-color: white;
-  font-family: Courier;
-  font-size: 12px;
-}
-#tableReady thead {
-  background-color: rgba(0,0,0,.1);
-}
-#divUserProgramInput textarea {
-  width: 90%;
-  font-family: Courier;
-}
 #header {
-  /* position: relative; */
+  
 }
+
 #header:after {
   content : "";
   display: block;
@@ -151,21 +42,11 @@ nav {
   z-index: -1;
 }
 
-#btnReset {
-  color: white;
-}
-#btnNextStep {
-  color: white;
-}
-
-#tableCPU thead td {
-  width: 45px;
-}
-
 .background {
   position: relative;
   overflow-x: hidden;
   overflow-y: hidden;
+  height: 75vh;
 }
 
 @-webkit-keyframes rotate {
@@ -206,44 +87,76 @@ nav {
   -moz-animation-timing-function:linear;
 }
 
-label .label-header{
-  color: black;
-  font-weight: bold;
+textarea {
+  resize: none;
 }
 
-#beautiful {
-  background-color: rgba(0,0,0,.2);
-  border: 2px;
-  border-radius: 5px;
-  width: 450px;
-  height: 550px;
-}
-#sexy {
-  margin-left: auto;
-  margin-right: auto;
-  background: url('distrib/images/beautiful.png');
-  background-size: cover;
-  background-position-x: -50px;
-  width: 400px;
-  height: 500px;
+.container {
+  max-width: none !important;
 }
 
-.panel-header {
-  color: black;
-  font-weight: bold;
-  margin-left: 40%;
+@media only screen and (min-width: 993px) {
+  .container {
+    width: 90% !important;
+  }
 }
 
-#tableDisk {
-  max-width: 500px;
+#divConsole {
+}
+
+#display {
+  background-color:#DFDBC3;
+  border: 2px solid black;
+  cursor: default;
+}
+
+#taHostLog {
+  height: 10rem;
+  background-color: white;
+}
+
+#taProgramInput {
+  background-color: white;
+}
+
+#sexydisplay {
+  /* max-width: 150px; */
+  font-size: .75em;
+}
+
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+#displaycol {
+  min-width: 560px;
+}
+
+#consolerow {
+  min-width: 750px;
+}
+
+#tableCPU {
   font-family: Courier;
 }
 
-#tableDisk tr {
-  max-width: 500px;
-  overflow: scroll;
+#tableMemory {
+  font-family: Courier;
 }
 
-.toprow {
-  min-width: 1430px;
+#tableReady {
+  font-family: Courier;
 }
+
+td {
+  width: 500px; /* lol */
+  text-align: center;
+}
+
+tr { line-height: 5px; }
